[gd_scene load_steps=15 format=3 uid="uid://c5nne8v7x3avu"]

[ext_resource type="Script" path="res://Scenes/game/fish/fish_body.gd" id="1_h0yt5"]
[ext_resource type="Texture2D" uid="uid://cormmvthb0itk" path="res://art/fish_1.png" id="2_la8n0"]
[ext_resource type="Script" path="res://Scenes/game/state_machine/state_machine.gd" id="3_p2em5"]
[ext_resource type="Script" path="res://Scenes/game/fish/fish_idle.gd" id="4_1yylt"]
[ext_resource type="Script" path="res://Scenes/game/fish/fish_swimming.gd" id="5_bwct7"]
[ext_resource type="Script" path="res://Scenes/game/fish/fish_fleeing.gd" id="6_03g5u"]
[ext_resource type="Script" path="res://Scenes/game/fish/fish_feeding.gd" id="7_tngvw"]
[ext_resource type="Script" path="res://Scenes/game/fish/fish_hunting.gd" id="8_ki0ob"]
[ext_resource type="Script" path="res://Scenes/game/fish/fish_mating.gd" id="9_nye4t"]

[sub_resource type="Animation" id="Animation_mxa7c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_whs7m"]
resource_name = "SwimLeft"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cvmth"]
resource_name = "SwimRight"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ekwv"]
_data = {
"RESET": SubResource("Animation_mxa7c"),
"SwimLeft": SubResource("Animation_whs7m"),
"SwimRight": SubResource("Animation_cvmth")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0hl1j"]
radius = 24.0
height = 70.0

[node name="GreenFish" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_h0yt5")
type = "GreenFish"
fleeSpeed = 80
feedLevel = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_la8n0")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ekwv")
}

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0hl1j")

[node name="IdleTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("3_p2em5")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_1yylt")

[node name="Swimming" type="Node" parent="StateMachine"]
script = ExtResource("5_bwct7")

[node name="Fleeing" type="Node" parent="StateMachine"]
script = ExtResource("6_03g5u")

[node name="Feeding" type="Node" parent="StateMachine"]
script = ExtResource("7_tngvw")

[node name="Hunting" type="Node" parent="StateMachine"]
script = ExtResource("8_ki0ob")

[node name="Mating" type="Node" parent="StateMachine"]
script = ExtResource("9_nye4t")

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = 22.0
offset_right = 21.0
offset_bottom = 48.0
text = "State"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
